testsuite/bsc.typechecker/typeclasses/InstanceVariablePositions.bsv
Bit#(8) x = truncate(1);
